add  new js file

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
                 <img src="./Logo maker project-1 (2).png" alt="" class="header-img">
             </div>
                 <nav>
-                    <a href="#" class="nav-child">home</a>
-                    <a href="#" class="nav-child">about us</a>
-                    <a href="#" class="nav-child">create your plan</a>
+                    <a href="#" id="nav-child">home</a>
+                    <a href="#" id="nav-child">about us</a>
+                    <a href="#" id="nav-child">create your plan</a>
+                    <img src="./hamburger-line.jpg" alt="" id="menu">
                 </nav>
         </header>
 
@@ -29,7 +30,17 @@
                 
             </div>
             <div class="hero-right">
-                <img src="./Untitled (8).png" alt="" class="hero-right-img">
+                <button id="hero-right-button">
+                    <img src="./left-array.png" alt="" class="right-images">
+                </button>
+                <img src="./Untitled (8).png" alt="" id="hero-right-img">
+                <img src="./My-Photos-with_abduvali.jpg" alt="" id="menabduvali">
+                <img src="./my_photos_with_iphone.jpg" alt="" id="men_iphone">
+                <img src="./Photos_myself.jpg" alt="" id="men_ozim">
+
+                <button class="right-array">
+                    <img src="./right-array.png" alt="" id="right-aray">
+                </button>
             </div>
         </section>
     </div>
@@ -122,6 +133,8 @@
             </div>
         </footer>
     </section>
+
+    <script src="main.js"></script>
     
 </body>
 </html>
