--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <a href="#" id="nav-child">home</a>
                     <a href="#" id="nav-child">about us</a>
                     <a href="#" id="nav-child">create your plan</a>
-                    <img src="./hamburger-line.jpg" alt="" id="menu">
+                    <!-- <img src="./hamburger-line.jpg" alt="" id="menu"> -->
                 </nav>
         </header>
 
