add new photo changer

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="hero-right">
                 <button id="hero-right-button">
-                    <img src="./left-array.png" alt="" class="right-images">
+                    <img src="./left-array.png" alt="" id="right-images">
                 </button>
                 <img src="./Untitled (8).png" alt="" id="hero-right-img">
                 <img src="./My-Photos-with_abduvali.jpg" alt="" id="menabduvali">
